# xbrl-filings-api

./: .buildinfo  .gitignore  README.md  api-reference.html  changing-year-filter-scope.html  database.html  examples.py  genindex.html  getting-started.html  glossary.html  index.html  objects.inv  py-modindex.html  pyproject.toml  reporting-date-or-last-end-date.html  ruff.toml  search.html  searchindex.js
.doctrees/: api-reference.doctree  changing-year-filter-scope.doctree  database.doctree  getting-started.doctree  glossary.doctree  index.doctree  reporting-date-or-last-end-date.doctree
.doctrees/api/: xbrl_filings_api.APIError.doctree  xbrl_filings_api.APIObject.doctree  xbrl_filings_api.APIPage.doctree  xbrl_filings_api.APIResource.doctree  xbrl_filings_api.DownloadInfo.doctree  xbrl_filings_api.DownloadItem.doctree  xbrl_filings_api.Entity.doctree  xbrl_filings_api.Filing.doctree  xbrl_filings_api.FilingSet.doctree  xbrl_filings_api.FilingsPage.doctree  xbrl_filings_api.ResourceCollection.doctree  xbrl_filings_api.SQLiteView.doctree  xbrl_filings_api.ScopeFlag.doctree  xbrl_filings_api.ValidationMessage.doctree  xbrl_filings_api.constants.doctree  xbrl_filings_api.debug.doctree  xbrl_filings_api.default_views.doctree  xbrl_filings_api.downloader.doctree  xbrl_filings_api.downloader.stats.doctree  xbrl_filings_api.exceptions.doctree  xbrl_filings_api.options.doctree  xbrl_filings_api.query.doctree  xbrl_filings_api.stats.doctree
.doctrees/dev/: before-commit.doctree  doc-conventions.doctree  index.doctree  internal-reference.doctree  release-checklist.doctree
.github/workflows/: sphinx.yml  test.yml
_sources/: changing-year-filter-scope.rst.txt  database.rst.txt  getting-started.rst.txt  glossary.rst.txt  index.rst.txt
_sources/api/: xbrl_filings_api.APIError.rst.txt  xbrl_filings_api.APIObject.rst.txt  xbrl_filings_api.APIPage.rst.txt  xbrl_filings_api.APIResource.rst.txt  xbrl_filings_api.DownloadInfo.rst.txt  xbrl_filings_api.DownloadItem.rst.txt  xbrl_filings_api.Entity.rst.txt  xbrl_filings_api.Filing.rst.txt  xbrl_filings_api.FilingSet.rst.txt  xbrl_filings_api.FilingsPage.rst.txt  xbrl_filings_api.ResourceCollection.rst.txt  xbrl_filings_api.SQLiteView.rst.txt  xbrl_filings_api.ScopeFlag.rst.txt  xbrl_filings_api.ValidationMessage.rst.txt  xbrl_filings_api.constants.rst.txt  xbrl_filings_api.debug.rst.txt  xbrl_filings_api.default_views.rst.txt  xbrl_filings_api.downloader.rst.txt  xbrl_filings_api.downloader.stats.rst.txt  xbrl_filings_api.exceptions.rst.txt  xbrl_filings_api.options.rst.txt  xbrl_filings_api.query.rst.txt  xbrl_filings_api.stats.rst.txt
api/: xbrl_filings_api.APIError.html  xbrl_filings_api.APIObject.html  xbrl_filings_api.APIPage.html  xbrl_filings_api.APIResource.html  xbrl_filings_api.DownloadInfo.html  xbrl_filings_api.DownloadItem.html  xbrl_filings_api.Entity.html  xbrl_filings_api.Filing.html  xbrl_filings_api.FilingSet.html  xbrl_filings_api.FilingsPage.html  xbrl_filings_api.ResourceCollection.html  xbrl_filings_api.SQLiteView.html  xbrl_filings_api.ScopeFlag.html  xbrl_filings_api.ValidationMessage.html  xbrl_filings_api.constants.html  xbrl_filings_api.debug.html  xbrl_filings_api.default_views.html  xbrl_filings_api.downloader.html  xbrl_filings_api.downloader.stats.html  xbrl_filings_api.exceptions.html  xbrl_filings_api.options.html  xbrl_filings_api.query.html  xbrl_filings_api.stats.html
dev/: before-commit.html  doc-conventions.html  index.html  internal-reference.html  release-checklist.html
docs/: requirements.txt
docs/source/: conf.py  (+6 more)
tests/: __init__.py  conftest.py  conftest_source.py  mock_upgrade.py  urlmock.py
xbrl_filings_api/: __about__.py  __init__.py  __main__.py  api_error.py  api_object.py  api_page.py  api_request.py  api_resource.py  constants.py  database_processor.py  debug.py  default_views.py  download_info.py  download_item.py  download_item_construct.py  download_specs_construct.py  entity.py  enums.py  exceptions.py  filing.py  filing_set.py  filings_api.py  filings_page.py  json_tree.py  lang_code_transform.py  options.py  order_columns.py  query.py  request_processor.py  resource_collection.py  save_paths.py  scope_flag.py  sqlite_view.py  stats.py  time_formats.py  validation_message.py
(+190 files in other folders)
